added rented and soldout atributes

--- a/content/propiedad/1.md
+++ b/content/propiedad/1.md
@@ -14,6 +14,8 @@ longitud: 572836.8
 latitud: 331145.7
 price: '33000'
 currency: U$S
+soldout: true
+rented: false
 images:
   - /assets/img_whatsapp-image-2020-03-24-at-10.42.08-am-1-.jpeg
   - /assets/img_whatsapp-image-2020-03-24-at-10.42.08-am.jpeg
