--- a/content/propiedad/10.md
+++ b/content/propiedad/10.md
@@ -13,6 +13,8 @@ longitud: 572843.8
 latitud: -343713.9
 price: '130000'
 currency: U$S
+soldout: false
+rented: false
 images:
   - /assets/img_18-de-julio-y-píriz.jpg
 propertyType: casas
