--- a/content/propiedad/11.md
+++ b/content/propiedad/11.md
@@ -12,6 +12,8 @@ title: Amplia casona
 longitud: 572850.8
 latitud: -331113.1
 price: '120000'
+soldout: false
+rented: false
 currency: U$S
 images:
   - /assets/11.jpg
