--- a/content/propiedad/3.md
+++ b/content/propiedad/3.md
@@ -11,6 +11,8 @@ location: Morquio y Washington
 title: Casa en Morquio y Washington
 longitud: 572850.4
 latitud: 343655.8
+soldout: false
+rented: false
 price: '150000'
 currency: U$S
 images:
