--- a/content/propiedad/4.md
+++ b/content/propiedad/4.md
@@ -11,6 +11,8 @@ location: Zorrilla y 18 de Julio
 title: Excepcional apartamento
 longitud: 572837.7
 latitud: 343717.5
+soldout: false
+rented: false
 price: '170000'
 currency: U$S
 images:
