--- a/content/propiedad/6.md
+++ b/content/propiedad/6.md
@@ -10,6 +10,8 @@ title: Excelente casa en el carmen
 longitud: 575915.3
 latitud: -344535.4
 price: '70000'
+soldout: false
+rented: false
 currency: U$S
 images:
   - /assets/img_b1c2ef26-716f-4b29-bc9c-b8b9ecd9f28c.jpg
