--- a/content/propiedad/8.md
+++ b/content/propiedad/8.md
@@ -12,6 +12,8 @@ title: 'Oferta! casa moderna '
 longitud: 573012.2
 latitud: -343630.1
 price: '90000'
+soldout: false
+rented: false
 currency: U$S
 images:
   - /assets/img_b91714fd-cee5-4ab9-b9b5-fed75a787f9d.jpg
