--- a/content/propiedad/9.md
+++ b/content/propiedad/9.md
@@ -14,6 +14,8 @@ longitud: 572847.4
 latitud: -343719.7
 price: '240000'
 currency: U$S
+soldout: false
+rented: false
 images:
   - /assets/img_brum-y-píriz.jpg
   - /assets/img_8af84be4-ba23-48f4-b419-c81b39939597.jpg
