--- a/content/propiedad/4-1.md
+++ b/content/propiedad/4-1.md
@@ -12,6 +12,8 @@ location: Frente al Parque de la Hispanidad
 title: Casa Frente al Parque de la Hispanidad
 longitud: 57296.2
 latitud: 343530.6
+soldout: false
+rented: false
 price: '160000'
 currency: U$S
 images:
