--- a/content/propiedad/7.md
+++ b/content/propiedad/7.md
@@ -10,6 +10,8 @@ title: Casa con gran terreno en el carmen
 longitud: 575857.4
 latitud: -344536.7
 price: '32000'
+soldout: false
+rented: false
 currency: U$S
 images:
   - /assets/img_carmen-casa-con-terreno.jpg
