--- a/content/propiedad/9.md
+++ b/content/propiedad/9.md
@@ -13,9 +13,9 @@ title: Muy buena y moderna casa
 longitud: 572847.4
 latitud: -343719.7
 price: '240000'
-currency: U$S
-soldout: false
+soldout: true
 rented: false
+currency: U$S
 images:
   - /assets/img_brum-y-píriz.jpg
   - /assets/img_8af84be4-ba23-48f4-b419-c81b39939597.jpg
