--- a/content/propiedad/9.md
+++ b/content/propiedad/9.md
@@ -9,9 +9,9 @@ description: >-
   americana, fondo con amplia barbacoa y salón al frente, todo en excelente
   estado – 378 metros de terreno y 178 metros construidos.
 location: Baltasar Brum y Eusebio Píriz
-title: Muy buena y moderna casa
-longitud: 572847.4
-latitud: -343719.7
+title: Muy buena y moderna casa en Baltasar Brum y Eusebio Píriz
+longitud: -33.3778702
+latitud: -56.5223749
 price: '240000'
 soldout: true
 rented: false
