--- a/content/propiedad/8.md
+++ b/content/propiedad/8.md
@@ -8,9 +8,9 @@ description: >-
   – Moderna casa con dos dormitorios – living comedor con estufa a leña – cocina
   comedor – amplio patio con pieza grande – baño
 location: Continuación Batlle esq. Carlos Maria de Pena
-title: 'Oferta! casa moderna '
-longitud: 573012.2
-latitud: -343630.1
+title: Oferta! casa moderna Continuación Batlle esq. Carlos Maria de Pena
+longitud: -33.391795
+latitud: -56.4979362
 price: '90000'
 soldout: false
 rented: false
