--- a/content/propiedad/7.md
+++ b/content/propiedad/7.md
@@ -6,9 +6,9 @@ mts2: '1.800'
 garage: 'no'
 description: – Casa con terreno de 1800 m2 – en 25 de Agosto a 200 mts de Ruta 14
 location: 25 de Agosto casi ruta 14
-title: Casa con gran terreno en el carmen
-longitud: 575857.4
-latitud: -344536.7
+title: Casa con gran terreno en el carmen 25 de Agosto casi ruta 14
+longitud: -33.239945
+latitud: -56.0189712
 price: '32000'
 soldout: false
 rented: false
