--- a/content/propiedad/1.md
+++ b/content/propiedad/1.md
@@ -10,12 +10,12 @@ description: >-
   independiente y jardín – totalmente equipada
 location: 'Valerio López, Tacuarembó'
 title: 'En Paso de los Toros, Oportunidad!! Valerio Lopez e Ituzaingó'
-longitud: 572836.8
-latitud: 331145.7
+longitud: -32.8039616
+latitud: -56.5253059
 price: '33000'
-currency: U$S
 soldout: true
 rented: false
+currency: U$S
 images:
   - /assets/img_whatsapp-image-2020-03-24-at-10.42.08-am-1-.jpeg
   - /assets/img_whatsapp-image-2020-03-24-at-10.42.08-am.jpeg
