--- a/content/propiedad/10.md
+++ b/content/propiedad/10.md
@@ -8,13 +8,13 @@ description: >-
   – Cómoda casa de 2 dormitorios – living comedor – estar comedor con estufa –
   patio con galpón – baño
 location: 18 de Julio y Eusebio Píriz
-title: Cómoda casa de 2 dormitorio
-longitud: 572843.8
-latitud: -343713.9
+title: Cómoda casa de 2 dormitorios  18 de Julio y Eusebio Píriz
+longitud: -33.3793634
+latitud: -56.5220887
 price: '130000'
-currency: U$S
 soldout: false
 rented: false
+currency: U$S
 images:
   - /assets/img_18-de-julio-y-píriz.jpg
 propertyType: casas
