--- a/content/propiedad/11.md
+++ b/content/propiedad/11.md
@@ -8,9 +8,9 @@ description: >-
   – Amplia casona – totalmente original – ideal inversionista – arrendada en $
   40.000
 location: Paso de los Toros - Sobre calle Rivera
-title: Amplia casona
-longitud: 572850.8
-latitud: -331113.1
+title: Amplia casona Paso de los Toros - Sobre calle Rivera
+longitud: -32.8130211
+latitud: -56.5214087
 price: '120000'
 soldout: false
 rented: false
