--- a/content/propiedad/12.md
+++ b/content/propiedad/12.md
@@ -9,9 +9,9 @@ description: >-
   grande con placar – baño y cocina nuevo – todo en excelente condiciones
   CONSULTE.
 location: 19 de Abril y Rivera
-title: Casa ideal en excelente punto
-longitud: 572824.4
-latitud: 343716
+title: Casa ideal en excelente punto 19 de Abril y Rivera
+longitud: -33.3781519
+latitud: -56.5287122
 price: '-'
 soldout: false
 rented: false
