--- a/content/propiedad/13.md
+++ b/content/propiedad/13.md
@@ -9,9 +9,9 @@ description: >-
   dormitorios – living comedor con estufa – baño – cocina – dos piezas de
   depósito OFERTA
 location: Lavalleja y J. B. De León
-title: Buena casa con terreno
-longitud: 572832.6
-latitud: 343737.5
+title: Buena casa con terreno Lavalleja y J. B. De León
+longitud: -33.3728589
+latitud: -56.5264751
 price: '120000'
 soldout: false
 rented: false
