--- a/content/propiedad/14.md
+++ b/content/propiedad/14.md
@@ -10,8 +10,8 @@ description: >-
   138 m2 construidos OFERTA
 location: Centenario sobre Avenida a metros de Ruta 5
 title: 'Casa en Centenario '
-longitud: 33108.1
-latitud: 573019.6
+longitud: -32.831381
+latitud: -56.4957601
 price: '90000'
 soldout: false
 rented: false
