--- a/content/propiedad/15.md
+++ b/content/propiedad/15.md
@@ -8,9 +8,9 @@ description: >-
   – Casa nueva, con detalles a terminar – 2 dormitorios – living comedor –
   cocina americana – baño – 600 m2 de terreno
 location: Barrio Hipódromo
-title: Casa nueva con detalles a terminar
-longitud: 343655.2
-latitud: 572955.4
+title: Casa nueva con detalles a terminar Barrio Hipódromo
+longitud: -33.3841419
+latitud: -56.504262
 price: '55000'
 soldout: false
 rented: false
