--- a/content/propiedad/16.md
+++ b/content/propiedad/16.md
@@ -9,8 +9,8 @@ description: >-
   – cocina con comedor diario – estufa a leña – patio con parrillero techado –
   en excelente estado de conservación CONSULTE
 location: Zorrilla y Batlle
-title: muy buena casa Zorrilla y Batlle
-longitud: -33.380782
+title: Muy buena casa Zorrilla y Batlle
+longitud: -33.3801803
 latitud: -56.5250813
 price: CONSULTE
 soldout: false
