--- a/content/propiedad/17.md
+++ b/content/propiedad/17.md
@@ -7,8 +7,8 @@ garage: 'no'
 description: >-
   – Casa quinta – con 4.600 m2 de terreno – con 3 o 4 dormitorios – amplio
   living comedor – 2 baños – todo en excelente condiciones
-location: Ruta 14 y Emilio Rossi - Casa quinta
-title: Casa quinta
+location: 'Ruta 14 y Emilio Rossi '
+title: 'Casa quinta Ruta 14 y Emilio Rossi '
 longitud: -33.3899677
 latitud: -56.5433819
 price: '140000'
