--- a/content/propiedad/4.md
+++ b/content/propiedad/4.md
@@ -8,12 +8,12 @@ description: >-
   Excepcional apartamento con amplio living comedor, cocina comedor a nuevo, 2
   baños a nuevos, estar diario, y dos amplios dormitorios con placares.
 location: Zorrilla y 18 de Julio
-title: Excepcional apartamento
-longitud: 572837.7
-latitud: 343717.5
+title: Excepcional apartamento en Zorrilla y 18 de Julio
+longitud: -33.3786454
+latitud: -56.525258
+price: '170000'
 soldout: false
 rented: false
-price: '170000'
 currency: U$S
 images:
   - /assets/img_e8581e72-3e1c-4968-a7b5-78a17743a4a7.jpg
