--- a/content/propiedad/1.md
+++ b/content/propiedad/1.md
@@ -13,7 +13,7 @@ title: 'En Paso de los Toros, Oportunidad!! Valerio Lopez e Ituzaingó'
 longitud: -32.8039616
 latitud: -56.5253059
 price: '33000'
-soldout: true
+soldout: false
 rented: false
 currency: U$S
 images:
