--- a/content/propiedad/1.md
+++ b/content/propiedad/1.md
@@ -1,6 +1,6 @@
 ---
 id: 1
-bedroom: '3'
+bedroom: '80'
 bathroom: '1'
 mts2: '-'
 garage: 'no'
@@ -8,11 +8,13 @@ description: >-
   – Vivienda en excelente estado – de 2 o 3 dormitorios – desarrollada en 2
   plantas – living comedor con estufa, cocina comedor, patio con entrada
   independiente y jardín – totalmente equipada
-location: 'Valerio López, Tacuarembó'
+state: mvdeo
+zone: pocitos
 title: 'En Paso de los Toros, Oportunidad!! Valerio Lopez e Ituzaingó'
 longitud: -32.8039616
 latitud: -56.5253059
 price: '33000'
+destacada: true
 soldout: false
 rented: false
 currency: U$S
