--- a/content/propiedad/1.md
+++ b/content/propiedad/1.md
@@ -1,6 +1,6 @@
 ---
 id: 1
-bedroom: '80'
+bedroom: '2'
 bathroom: '1'
 mts2: '-'
 garage: 'no'
@@ -8,8 +8,7 @@ description: >-
   – Vivienda en excelente estado – de 2 o 3 dormitorios – desarrollada en 2
   plantas – living comedor con estufa, cocina comedor, patio con entrada
   independiente y jardín – totalmente equipada
-state: mvdeo
-zone: pocitos
+location: ' '
 title: 'En Paso de los Toros, Oportunidad!! Valerio Lopez e Ituzaingó'
 longitud: -32.8039616
 latitud: -56.5253059
