--- a/content/propiedad/3.md
+++ b/content/propiedad/3.md
@@ -11,9 +11,10 @@ location: Morquio y Washington
 title: Casa en Morquio y Washington
 longitud: 572850.4
 latitud: 343655.8
+price: '130000'
+destacada: true
 soldout: false
 rented: false
-price: '150000'
 currency: U$S
 images:
   - /assets/img_morquio-y-washington.jpeg
