--- a/content/propiedad/13.md
+++ b/content/propiedad/13.md
@@ -13,7 +13,8 @@ title: Buena casa con terreno Lavalleja y J. B. De León
 longitud: -33.3728589
 latitud: -56.5264751
 price: '120000'
-soldout: false
+destacada: true
+soldout: true
 rented: false
 currency: U$S
 images:
