--- a/content/propiedad/2.md
+++ b/content/propiedad/2.md
@@ -7,12 +7,13 @@ garage: 'no'
 description: >-
   – Buena casa de estilo, en muy buen estado – con 3 amplios dormitorios, living
   comedor, baño y cocina en buen estado y patio con entrada de garaje por calle
-  Morquio
+  Morquio. OFERTA ESPECIAL U$S 78.000.
 location: 25 de Agosto y Morquio
 title: Casa en 25 de Agosto y morquio
 longitud: 572843
 latitud: 343659.1
-price: '140000'
+price: '78000'
+destacada: true
 soldout: false
 rented: false
 currency: U$S
