--- a/content/propiedad/7.md
+++ b/content/propiedad/7.md
@@ -4,12 +4,15 @@ bedroom: '2'
 bathroom: '1'
 mts2: '1.800'
 garage: 'no'
-description: – Casa con terreno de 1800 m2 – en 25 de Agosto a 200 mts de Ruta 14
+description: 'Casa con terreno de 1800 m2 '
 location: 25 de Agosto casi ruta 14
-title: Casa con gran terreno en el carmen 25 de Agosto casi ruta 14
+title: >-
+  Casa con gran terreno en El Carmen ubicada en 25 de Agosto a 200 mts de Ruta
+  14
 longitud: -33.239945
 latitud: -56.0189712
-price: '32000'
+price: '26000'
+destacada: true
 soldout: false
 rented: false
 currency: U$S
