--- a/content/propiedad/2.md
+++ b/content/propiedad/2.md
@@ -14,7 +14,7 @@ longitud: 572843
 latitud: 343659.1
 price: '78000'
 destacada: true
-soldout: false
+soldout: true
 rented: false
 currency: U$S
 images:
