--- a/content/propiedad/18.md
+++ b/content/propiedad/18.md
@@ -1,21 +1,21 @@
 ---
 id: 18
-bedroom: '4'
-bathroom: '2'
-mts2: '-'
+bedroom: "4"
+bathroom: "2"
+mts2: "-"
 garage: si
-description: >-
-  – Moderna y confortable casa desarrollada en dos plantas – Planta baja: living
-  comedor con estufa a leña, escritorio o dormitorio chico, baño social, cocina,
-  fondo con cochera, parrillero y pieza lavadero. – Planta alta: amplio
-  dormitorio principal, dos dormitorios y baño.
+description: "– Moderna y confortable casa desarrollada en dos plantas – Planta
+  baja: living comedor con estufa a leña, escritorio o dormitorio chico, baño
+  social, cocina, fondo con cochera, parrillero y pieza lavadero. – Planta alta:
+  amplio dormitorio principal, dos dormitorios y baño."
 location: Wilson Ferreira y Baltasar Brum
 title: Moderna casa Wilson Ferreira y Baltasar Brum
 longitud: 33.3780677
 latitud: -56.5194289
-price: '230000'
+price: "230000"
+destacada: true
 soldout: false
-rented: true
+rented: false
 currency: U$S
 images:
   - /assets/img_img_3941.jpg
@@ -33,6 +33,5 @@ images:
   - /assets/img_img_3920.jpg
 propertyType: casas
 listType: ventas
-date: 'July 26, 2020 3:56 PM'
+date: July 26, 2020 3:56 PM
 ---
-
